--- a/src/stellar-pointer.web-api/Properties/launchSettings.json
+++ b/src/stellar-pointer.web-api/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,21 +7,21 @@
       "sslPort": 0
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "stellar_pointer.web_api": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:8081",
+      "commandLineArgs": "--urls \"http://localhost:8081\"",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:8081"
     }
   }
 }
