--- a/src/stellar-pointer.web-api/stellar-pointer.web-api.csproj
+++ b/src/stellar-pointer.web-api/stellar-pointer.web-api.csproj
@@ -1,14 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>StellarPointer.WebApi</RootNamespace>
     <AssemblyName>stellar-pointer.web-api</AssemblyName>
     <UserSecretsId>3b066c0c-bd01-4135-a3d2-09a2e197dd8b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Ports" Version="4.7.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
+    <PackageReference Include="System.IO.Ports" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\stellar-pointer.business\stellar-pointer.business.csproj" />
+    <ProjectReference Include="..\stellar-pointer.persistance\stellar-pointer.persistence.csproj" />
   </ItemGroup>
 
 
