--- a/src/stellar-pointer.web-app/package.json
+++ b/src/stellar-pointer.web-app/package.json
@@ -11,39 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
-    "@angular/cdk": "^11.2.2",
-    "@angular/common": "~11.2.3",
-    "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
-    "@angular/forms": "~11.2.3",
-    "@angular/material": "^11.2.2",
-    "@angular/platform-browser": "~11.2.3",
-    "@angular/platform-browser-dynamic": "~11.2.3",
-    "@angular/router": "~11.2.3",
-    "rxjs": "~6.6.6",
-    "tslib": "^2.1.0",
+    "@angular/animations": "~12.2.1",
+    "@angular/cdk": "^12.2.1",
+    "@angular/common": "~12.2.1",
+    "@angular/compiler": "~12.2.1",
+    "@angular/core": "~12.2.1",
+    "@angular/forms": "~12.2.1",
+    "@angular/material": "^12.2.1",
+    "@angular/platform-browser": "~12.2.1",
+    "@angular/platform-browser-dynamic": "~12.2.1",
+    "@angular/router": "~12.2.1",
+    "@aspnet/signalr": "^1.0.27",
+    "glob-parent": "^6.0.1",
+    "rxjs": "~7.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.2",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
-    "@angular/language-service": "~11.2.3",
-    "@types/node": "^14.14.31",
-    "@types/jasmine": "~3.6.4",
-    "@types/jasminewd2": "~2.0.8",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.1.1",
+    "@angular-devkit/build-angular": "^12.2.1",
+    "@angular/cli": "~12.2.1",
+    "@angular/compiler-cli": "~12.2.1",
+    "@angular/language-service": "~12.2.1",
+    "@types/jasmine": "~3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.6.1",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~9.1.1",
+    "ts-node": "~10.2.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.3.5"
   }
 }
